--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,8 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "d1:migrations:local": "wrangler d1 migrations apply DB --local"
+    "d1:migrations:local": "wrangler d1 migrations apply DB --local",
+    "d1:migrations:remote": "wrangler d1 migrations apply DB"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
