--- a/apps/server/wrangler.jsonc
+++ b/apps/server/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "my-better-t-app-server",
+  "name": "line-agent-app",
   "main": "src/index.ts",
   "compatibility_date": "2025-06-15",
   "compatibility_flags": ["nodejs_compat"],
