--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,7 @@
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "d1:migrations:local": "wrangler d1 migrations apply DB --local",
-    "d1:migrations:remote": "wrangler d1 migrations apply DB"
+    "d1:migrations:remote": "wrangler d1 migrations apply DB --remote"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
